Fix jumpUp button Switch to reffere instead of src url Once again, I am changing animations

--- a/gallery/user/themes/default/animations.sass
+++ b/gallery/user/themes/default/animations.sass
@@ -7,10 +7,13 @@
 @keyframes notificationTimeout
     0%
         left: -100%
-        opacity: 1
+        height: 3px
     90%
         left: 0%
-        opacity: 1
+        height: 3px
+    95%
+        left: 0%
+        height: 0
     100%
         left: 0%
-        opacity: 0
+        height: 0
