--- a/gallery/user/themes/default/buttons/jumpUp.sass
+++ b/gallery/user/themes/default/buttons/jumpUp.sass
@@ -27,3 +27,11 @@
     &:hover
         background-color: $black
         color: $primary
+
+.jumpUp--show
+    right: 0.75rem
+    opacity: 1
+
+@media (max-width: $breakpoint)
+    .jumpUp
+        bottom: 4.25rem
