--- a/gallery/user/themes/default/ui/notification.sass
+++ b/gallery/user/themes/default/ui/notification.sass
@@ -90,7 +90,6 @@
     left: 0px
 
     background-color: $white
-    opacity: 0
 
     animation: notificationTimeout 5.1s linear
 
